[tool.poetry]
name = "days360"
version = "1.0.0"
description = "Calculates the days between two dates based on a 360 day year."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
